Fix slider checkbox thing on iOS.

--- a/styles/components/switch.styl
+++ b/styles/components/switch.styl
@@ -6,30 +6,47 @@ $handle-inset = 1px
 $border-width = 1px
 
 input[type=checkbox].switch
-  background-color: #ddd
-  width: $switch-width
-  height: $switch-height
-  border-radius: ($switch-height / 2)
-  transition: background-color $transition-duration
-  border: $border-width solid #ccc
+  width: 0
+  height: 0
+  position: relative
+  left: (- $switch-width)
+  top: ((- $switch-height) / 2)
+
+  &:before
+    position: absolute
+    content: ' '
+    display: block
+    background-color: #ddd
+
+    width: $switch-width
+    height: $switch-height
+
+    border-radius: ($switch-height / 2)
+    transition: background-color $transition-duration
+    border: $border-width solid #ccc
 
   &:after
+    position: absolute
     content: ' '
     display: block
     background-color: white
+
     width: $switch-height - ($handle-inset * 2)
     height: $switch-height - ($handle-inset * 2)
+    top: $handle-inset
+    left: $handle-inset
+
     margin-top: $handle-inset - $border-width
     margin-left: $handle-inset - $border-width
+
+    transition: left $transition-duration
     border-radius: ($switch-height / 2) - $handle-inset
 
-    position: relative
-    left: $handle-inset - $border-width
-    transition: left $transition-duration
 
   &:checked
-    background-color: #0f0
+    &:before
+      background-color: #0f0
 
     &:after
-      left: $switch-width - $switch-height - $handle-inset + $border-width
+      left: $switch-width - $switch-height + $handle-inset
 
